[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/gui.gd" type="Script" id=1]
[ext_resource path="res://Style/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/contiue.gd" type="Script" id=3]
[ext_resource path="res://Scripts/exit_to_menu.gd" type="Script" id=4]
[ext_resource path="res://Style/bar_line_style.tres" type="StyleBox" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "hp_low"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.490196 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../hp_down:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.490196 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hp_norm"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../hp_down:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.392157, 0.392157, 0.392157, 0.407843 )
border_width_top = 5
border_width_bottom = 6
border_color = Color( 0.305882, 0.305882, 0.305882, 0.435294 )
border_blend = true
corner_radius_top_right = 20

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="action_name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 23.0
margin_right = 62.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="crosshair" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5

[node name="demo" type="Label" parent="."]
margin_left = 51.0
margin_top = 15.0
margin_right = 555.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "DEMO FOOTAGE"
align = 1
valign = 1
uppercase = true

[node name="alert" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.0
margin_top = 48.0
margin_right = 141.0
margin_bottom = 145.0

[node name="text" type="Label" parent="alert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -7.0
margin_right = 39.5
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "PIZDA RULU"
align = 1
valign = 1

[node name="show" type="AnimationPlayer" parent="alert"]
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )

[node name="hp" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -683.0
margin_top = -54.0
margin_right = 683.0
margin_bottom = 46.0
color = Color( 1, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="hp"]
anims/hp_low = SubResource( 3 )
anims/hp_norm = SubResource( 4 )

[node name="stamina_bar" type="ProgressBar" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -142.0
margin_right = 272.0
margin_bottom = -102.0
custom_fonts/font = ExtResource( 2 )
custom_styles/fg = ExtResource( 5 )
custom_styles/bg = SubResource( 5 )
step = 0.0
rounded = true
percent_visible = false

[node name="hp_down" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -680.0
margin_top = -51.0
margin_right = 686.0
margin_bottom = 49.0
color = Color( 1, 0, 0, 0 )

[node name="charge_bar" type="ProgressBar" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -244.0
margin_right = 272.0
margin_bottom = -204.0
custom_fonts/font = ExtResource( 2 )
step = 0.0
rounded = true
allow_lesser = true

[node name="sheet" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -333.0
margin_right = 270.0
margin_bottom = 312.0

[node name="sheet_text" type="Label" parent="sheet"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.0
margin_top = 68.0
margin_right = 173.0
margin_bottom = 589.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="sheet_back" type="ColorRect" parent="sheet"]
show_behind_parent = true
margin_left = -409.0
margin_top = -51.0
margin_right = 957.0
margin_bottom = 717.0
color = Color( 0, 0, 0, 1 )

[node name="pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pause_back" type="ColorRect" parent="pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pause_text" type="Label" parent="pause"]
anchor_left = 0.5
anchor_top = 0.226
anchor_right = 0.5
anchor_bottom = 0.226
margin_left = -83.5
margin_top = -14.568
margin_right = 83.5
margin_bottom = 14.432
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "PAUSE MENU"

[node name="contiue" type="Button" parent="pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -22.0
margin_right = 100.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"
script = ExtResource( 3 )

[node name="exit_to_menu" type="Button" parent="pause"]
anchor_left = 0.5
anchor_top = 0.607
anchor_right = 0.5
anchor_bottom = 0.607
margin_left = -100.0
margin_top = -19.176
margin_right = 100.0
margin_bottom = 30.824
custom_fonts/font = ExtResource( 2 )
text = "Exit to Menu"
script = ExtResource( 4 )
